force-app/main/default/objects/Match_Moment__c/Match_Moment__c.object-meta.xml
<CustomObject>
    <description>Normalized major events for querying (goals, cards, critical moments only)</description>
    <label>Match Moment</label>
    <nameField>
        <displayFormat>EVT-{00000}</displayFormat>
        <label>Match Moment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Moments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>