force-app/main/default/objects/Match_Moment__c/fields/Commentary__c.field-meta.xml
<CustomField>
    <fullName>Commentary__c</fullName>
    <label>Commentary</label>
    <referenceTo>Commentary__c</referenceTo>
    <relationshipLabel>Match Moments</relationshipLabel>
    <relationshipName>Match_Moments</relationshipName>
    <type>MasterDetail</type>
</CustomField>