force-app/main/default/objects/Match_Moment__c/fields/Event_Data_JSON__c.field-meta.xml
<CustomField>
    <fullName>Event_Data_JSON__c</fullName>
    <label>Event Data JSON</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>