force-app/main/default/objects/Match_Moment__c/fields/Event_Importance__c.field-meta.xml
<CustomField>
    <fullName>Event_Importance__c</fullName>
    <label>Event Importance</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
                <default>true</default>
                <label>Major</label>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>