force-app/main/default/objects/Match_Moment__c/fields/Event_Second__c.field-meta.xml
<CustomField>
    <fullName>Event_Second__c</fullName>
    <label>Event Second</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>