force-app/main/default/objects/Match_Moment__c/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <label>Event Time</label>
    <type>DateTime</type>
    <description>The time when the event occurred</description>
</CustomField>