force-app/main/default/objects/Match_Moment__c/fields/External_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Event_ID__c</fullName>
    <label>External Event ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>