force-app/main/default/objects/Match_Moment__c/fields/Is_Shareable__c.field-meta.xml
<CustomField>
    <fullName>Is_Shareable__c</fullName>
    <label>Is Shareable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates if this event can be shared publicly</description>
</CustomField>