force-app/main/default/objects/Match_Moment__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Match</label>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Match Moments</relationshipLabel>
    <relationshipName>Match_Moments</relationshipName>
    <type>Lookup</type>
</CustomField>