force-app/main/default/objects/Match_Moment__c/fields/Match_Period__c.field-meta.xml
<CustomField>
    <fullName>Match_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Match Period</label>
    <referenceTo>Match_Period__c</referenceTo>
    <relationshipLabel>Match Moments</relationshipLabel>
    <relationshipName>Match_Moments</relationshipName>
    <type>Lookup</type>
</CustomField>