force-app/main/default/objects/Match_Moment__c/fields/Most_Shared_Platform__c.field-meta.xml
<CustomField>
    <fullName>Most_Shared_Platform__c</fullName>
    <label>Most Shared Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Platform with most shares</description>
</CustomField>