force-app/main/default/objects/Match_Moment__c/fields/Primary_Player__c.field-meta.xml
<CustomField>
    <fullName>Primary_Player__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Match Moments</relationshipLabel>
    <relationshipName>Match_Moments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>