force-app/main/default/objects/Match_Moment__c/fields/Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_URL__c</fullName>
    <label>Public URL</label>
    <type>Text</type>
    <length>255</length>
    <description>Shareable public URL for this moment</description>
</CustomField>