force-app/main/default/objects/Match_Moment__c/fields/QR_Code_URL__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_URL__c</fullName>
    <label>QR Code URL</label>
    <type>Text</type>
    <length>255</length>
    <description>QR code image URL for this moment</description>
</CustomField>