force-app/main/default/objects/Match_Moment__c/fields/Secondary_Player__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Match Moments Secondary</relationshipLabel>
    <relationshipName>Match_Moments_Secondary</relationshipName>
    <type>Lookup</type>
</CustomField>