force-app/main/default/objects/Match_Moment__c/fields/Social_Share_Description__c.field-meta.xml
<CustomField>
    <fullName>Social_Share_Description__c</fullName>
    <label>Social Share Description</label>
    <type>Text</type>
    <length>255</length>
    <description>Brief description for social media</description>
</CustomField>