force-app/main/default/objects/Match_Moment__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Match Moments</relationshipLabel>
    <relationshipName>Match_Moments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>