force-app/main/default/objects/Match_Moment__c/fields/Total_Views__c.field-meta.xml
<CustomField>
    <fullName>Total_Views__c</fullName>
    <label>Total Views</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total number of views</description>
</CustomField>