force-app/main/default/objects/Match_Moment__c/fields/View_Count__c.field-meta.xml
<CustomField>
    <fullName>View_Count__c</fullName>
    <label>View Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total number of times this event has been viewed</description>
</CustomField>