force-app/main/default/objects/Match_Moment__c/fields/Viral_Score__c.field-meta.xml
<CustomField>
    <fullName>Viral_Score__c</fullName>
    <label>Viral Score</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>Weighted viral engagement score</description>
</CustomField>